// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`file list states > then renders file list with status icons 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118mmulti[39m multiple files                                                            [38;2;76;62;118mBob[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mmultiple files[22m[39m                 [49m[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰜈[39m [38;2;165;255;144msrc/new.tsx[39m                                                                  [38;2;165;255;144m󰐕 50[39m [49m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;49;120;198m󰜈[39m [38;2;250;208;0msrc/existing.tsx[39m                                                              [38;2;250;208;0m󰏫 2[39m [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;49;120;198m󰜈[39m [38;2;255;98;140msrc/removed.tsx[39m                                                              [38;2;255;98;140m󰍴 10[39m [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/new.tsx (multi)[0m                                                          [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`file list states > then renders no files message for empty change 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118mempty[39m empty commit                                                            [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mempty commit[22m[39m                   [49m[38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all (empty)[0m                                                                  [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`file list states > then renders selected file with different index 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m change a                                                                    [38;2;76;62;118mAlice[39m[39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mchange a[22m[39m                       [49m[38;2;250;208;0m│[39m[38;2;49;120;198m󰜈[39m [38;2;165;255;144msrc/a.tsx[39m                                                                     [38;2;165;255;144m󰐕 5[39m [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;49;120;198m󰜈[39m [38;2;250;208;0msrc/b.tsx[39m                                                                     [38;2;250;208;0m󰏫 8[39m [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰜈[39m [38;2;250;208;0msrc/c.tsx[39m                                                                     [38;2;250;208;0m󰏫 2[39m [49m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/c.tsx (a)[0m                                                                [39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[0m                                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
